# vaultick

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT.md  README.md  install.sh  release-metadata.json
.github/workflows/: ci.yml  release.yml
docs/: README.md  release-install.md  security.md
docs/resources/: http.md  rsa.md  secrets.md
docs/services/: vaultick-cli.md  vaultick-lib.md  vaultick-proxy.md  vaultick-request.md
docs/superpowers/plans/: 2026-05-26-vaultick-hardening-architecture-cleanup.md  2026-05-26-vaultick-remote-ssh-implementation.md  2026-05-27-vaultick-remote-zstd-implementation.md
docs/superpowers/specs/: 2026-05-26-vaultick-remote-ssh-design.md  2026-05-27-vaultick-cli-verbose-debug-design.md  2026-05-27-vaultick-zstd-file-compression-design.md
docs/testing/: previa.md
scripts/: generate_release_metadata.py
shared/: runtime.rs
valtick/: Cargo.toml
valtick-bin/: Cargo.toml
valtick-bin/src/: main.rs
valtick-bin/tests/: e2e.rs
valtick/src/: lib.rs
vaultick/: Cargo.toml
vaultick-bin/: Cargo.toml
vaultick-bin/src/: main.rs
vaultick-bin/src/commands/: mod.rs  remote.rs
vaultick-bin/tests/: e2e.rs
vaultick-lib/: Cargo.toml
vaultick-lib/migrations/: 0001_initial.sql  0002_secret_compression.sql
vaultick-lib/src/: compression.rs  lib.rs
vaultick-mcp/: Cargo.toml
vaultick-mcp/src/: main.rs  models.rs  routes.rs  runtime.rs  services.rs
vaultick-mcp/tests/: e2e.rs
vaultick-proxy/: Cargo.toml  Dockerfile.artifact
vaultick-proxy/src/: main.rs  models.rs  routes.rs  services.rs
vaultick-proxy/tests/: e2e.rs
vaultick-request/: Cargo.toml
vaultick-request/src/: lib.rs
vaultick-request/tests/: e2e.rs
vaultick/src/: lib.rs
