[workspace]
members = [
    "vaultick-lib",
    "vaultick-request",
    "vaultick-bin",
    "vaultick-proxy",
    "vaultick-mcp",
]
resolver = "2"

[workspace.package]
version = "0.0.1-alpha.5"
license = "MIT"
repository = "https://github.com/runvibe/vaultick"
edition = "2024"
rust-version = "1.93"
authors = ["Philippe Assis <codephi@gmail.com>"]
homepage = "https://cloudvibe.com/vaultick"

[workspace.dependencies]
async-stream = "0.3"
axum = "0.8"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
http = "1"
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls",
] }
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ssh-key = { version = "0.6.7", features = ["rsa"] }
tempfile = "3"
thiserror = "2.0"
tokio = "1"
uuid = { version = "1.23.0", features = ["v4"] }
vaultick = { version = "0.0.1-alpha.5", path = "vaultick-lib" }
vaultick-request = { version = "0.0.1-alpha.5", path = "vaultick-request" }
