[package]
name = "vaultick"
version = "0.1.0"
edition = "2024"
description = "CLI for secure secret storage and process injection with vaultick"
license.workspace = true
repository.workspace = true
readme = "../README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rsa = { version = "0.9", features = ["pem"] }
dialoguer = "0.12"
ssh-key = { version = "0.6.7", features = ["rsa"] }
serde_json = "1"
vaultick = { package = "vaultick-lib", version = "0.1.0", path = "../vaultick" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "vaultick"
path = "src/main.rs"
