[package]
name = "vaultick-bin"
description = "CLI for secure secret storage and process injection with vaultick"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
rsa.workspace = true
dialoguer = "0.12"
serde.workspace = true
serde_json.workspace = true
ssh-key.workspace = true
vaultick.workspace = true
vaultick-request.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "vaultick"
path = "src/main.rs"
