[package]
name = "vaultick"
version = "0.1.0"
edition = "2024"
description = "SQLite-backed secret storage with RSA-wrapped encryption keys"
license.workspace = true
repository.workspace = true
readme = "../README.md"

[dependencies]
aes-gcm = "0.10"
hex = "0.4"
rand = "0.8"
rsa = { version = "0.9", features = ["pem"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
ssh-key = { version = "0.6.7", features = ["rsa"] }
thiserror = "2.0"
uuid = { version = "1", features = ["v4"] }
x509-parser = "0.16"

[dev-dependencies]
tempfile = "3"
