[package]
name = "vaultick"
description = "SQLite-backed secret storage with RSA-wrapped encryption keys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aes-gcm = "0.10"
hex = "0.4"
rand = "0.8"
rsa.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
ssh-key.workspace = true
thiserror.workspace = true
uuid.workspace = true
x509-parser = "0.16"

[dev-dependencies]
tempfile.workspace = true
