[package]
name = "vaultick-mcp"
description = "Local MCP HTTP/SSE server for safe vaultick-backed exec and request tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
futures-util.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
    "sync",
] }
tokio-stream = "0.1"
uuid.workspace = true
vaultick.workspace = true
vaultick-request.workspace = true

[dev-dependencies]
async-stream.workspace = true
axum.workspace = true
reqwest = { workspace = true, features = [
    "stream",
    "json",
] }
rsa.workspace = true
serde_json.workspace = true
ssh-key.workspace = true
tempfile.workspace = true

[[bin]]
name = "vaultick-mcp"
path = "src/main.rs"
