[package]
name = "vaultick-proxy"
version = "0.1.0"
edition = "2024"
description = "Config-driven reverse proxy for vaultick-backed secret injection"
license.workspace = true
repository.workspace = true
readme = "../README.md"
publish = false

[dependencies]
async-stream = "0.3"
axum = "0.8"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
vaultick = { package = "vaultick-lib", version = "0.1.0", path = "../vaultick" }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
rsa = { version = "0.9", features = ["pem"] }
serde_json = "1"
ssh-key = { version = "0.6.7", features = ["rsa"] }
tempfile = "3"

[[bin]]
name = "vaultick-proxy"
path = "src/main.rs"
