[package]
name = "vaultick-proxy"
description = "Config-driven reverse proxy for vaultick-backed secret injection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
axum.workspace = true
base64 = "0.22"
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
http.workspace = true
reqwest = { workspace = true, features = [
    "blocking",
] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
] }
vaultick.workspace = true
vaultick-request.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = [
    "stream",
    "json",
] }
rsa.workspace = true
serde_json.workspace = true
ssh-key.workspace = true
tempfile.workspace = true

[[bin]]
name = "vaultick-proxy"
path = "src/main.rs"
