[package]
name = "vaultick-request"
version = "0.1.0"
edition = "2024"
description = "Shared HTTP request engine, placeholder resolution, and response redaction for vaultick"
license.workspace = true
repository.workspace = true
readme = "../README.md"

[dependencies]
async-stream = "0.3"
bytes = "1"
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "stream"] }
thiserror = "2.0"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }

