[package]
name = "vaultick-request"
description = "Shared HTTP request engine, placeholder resolution, and response redaction for vaultick"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
reqwest = { workspace = true, features = [
    "blocking",
    "stream",
] }
thiserror.workspace = true

[dev-dependencies]
axum.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
] }
